# base64

./: CMakeLists.txt  LICENSE  README.md  base64.cpp  base64.h  build.py  conanfile.py
test_package/: CMakeLists.txt  test_package.cpp
tests/: CMakeLists.txt  basic_functioning.cpp  main.cpp
